Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-5708

Wrong list of targets after pressing back button in "New Qt Quick Application" wizard

XMLWordPrintable

    • 6d90cabe

      To reproduce:
      1) Start "New Qt Quick Application" wizard
      2) On "Application Type" select "Built-in elements only"
      3) On "Qt Versions" I see Desktop, Qt Simulator and Maemo5
      4) Click Back button and select "Qt Quick Components for Symbian"
      5) On "Qt Versions" I see Desktop only
      6) Click Back button and select again "Built-in elements only"
      7) On "Qt Versions" I see Desktop only - bug. I should see the same as in step 3

        For Gerrit Dashboard: QTCREATORBUG-5708
        # Subject Branch Project Status CR V

            jkobus Jarek Kobus
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes