Clear minimum Qt version and required features when needed

When the user chooses back button and select something
different than Symbian or Meego the above fields
should be cleared.

Task-number: QTCREATORBUG-5708
Change-Id: I2a8557cd1ab60dfc309c585399cd5b2210b44cc9
Reviewed-on: http://codereview.qt.nokia.com/2513
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Kai Koehne <kai.koehne@nokia.com>